WIP api implementation
