# here-naksha-app-service/src/main/java/com/here/naksha/app/service/http/apis/WriteFeatureApi.java
@@ -19,6 +19,7 @@
 package com.here.naksha.app.service.http.apis;
 
 import static com.here.naksha.app.service.http.tasks.WriteFeatureApiTask.WriteFeatureApiReqType.CREATE_FEATURES;
+import static com.here.naksha.app.service.http.tasks.WriteFeatureApiTask.WriteFeatureApiReqType.MODIFY_FEATURES;
 
 import com.here.naksha.app.service.http.NakshaHttpVerticle;
 import com.here.naksha.app.service.http.tasks.WriteFeatureApiTask;
@@ -41,6 +42,7 @@ public class WriteFeatureApi extends Api {
   @Override
   public void addOperations(final @NotNull RouterBuilder rb) {
     rb.operation("postFeatures").handler(this::createFeatures);
+    rb.operation("putFeatures").handler(this::createFeatures);
   }
 
   @Override
@@ -48,6 +50,10 @@ public class WriteFeatureApi extends Api {
 
   private void createFeatures(final @NotNull RoutingContext routingContext) {
     startWriteFeatureApiTask(CREATE_FEATURES, routingContext);
+  }
+
+  private void updateFeatures(final @NotNull RoutingContext routingContext) {
+    startWriteFeatureApiTask(MODIFY_FEATURES, routingContext);
   }
 
   private void startWriteFeatureApiTask(WriteFeatureApiReqType reqType, RoutingContext routingContext) {
